--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "compass": "^0.1.1",
     "core-js": "^2.6.5",
+    "sass": "^1.23.0",
+    "sass-compass-cli": "^1.0.2",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
