--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@inotom/vue-curve-text": "^2.0.0",
     "compass": "^0.1.1",
     "core-js": "^2.6.5",
+    "jQuery": "^1.7.4",
+    "jquery": "^3.4.1",
+    "lettering": "^0.4.1",
+    "letteringjs": "^0.7.0",
     "sass": "^1.23.0",
     "sass-compass-cli": "^1.0.2",
     "sass-loader": "^8.0.0",
